...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <EditText
                    android:id="@+id/catNameInput"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginVertical="40dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="Cat name here" />

                <Button
                    android:id="@+id/addCatButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:onClick="addCat"
                    android:text="Add cat" />
                <ImageView
...
