...
            android:text="Add to quiz"
            android:padding="12dp"
            android:layout_marginStart="16dp"
            />

        <ImageView
            android:id="@+id/addToQuiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="48dp"
            android:contentDescription="TODO"
            android:src="@drawable/ic_baseline_dashboard_24" />
    </LinearLayout>
...
